# AI-News-Reports

./: .gitignore  README.md  email_config.example.json  pyproject.toml  run.sh
.claude/skills/ai-news/: SKILL.md
.github/workflows/: publish-archive.yml
.tdd/: NOTES.md  registry.json
.tdd/backlog/: 001-remove-legacy-skill-clean-structure.md  002-scheduling-script-agent-sdk.md  003-project-readme-architecture.md
.tdd/completed/: 001-remove-legacy-skill-clean-structure.md
ai-news-signup/: package-lock.json  package.json  schema.sql  wrangler.toml
ai-news-signup/src/: archive.ts  index.ts  types.ts
ai-news-signup/src/lib/: email.ts  hmac.ts  turnstile.ts
ai-news-signup/src/routes/: admin.ts  subscribe.ts  unsubscribe.ts  verify.ts
docs/: index.html  styles.css  success.html  unsubscribed.html  verified.html
docs/admin/: index.html
docs/archive/: dec_30th_2025_to_jan_1st_2026.html  dec_31st_2025_to_jan_1st_2026.html  index.html  latest.html
plans/: ai-news-report-improvements.md  archive-feature.md  cloudflare-archive-system.md  subagent-driven-ai-news.md
reports/: .gitignore  README.md  manifest.jsonl
scripts/: run_pipeline.sh  setup_schedule.sh  uninstall_schedule.sh
src/ai_news/: __main__.py  config.py  pipeline.py
src/ai_news.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_analysis.py  test_pipeline.py
tests/test_fetchers/: test_base.py  test_fetchers.py
tests/test_publishing/: test_cloudflare.py  test_newsletter.py  test_persist.py  test_renderer.py
tests/test_utils/: test_dates.py
(+39 files in other folders)
